--- a/DataProject.ipynb
+++ b/DataProject.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "752ed8ce",
+   "metadata": {},
+   "source": [
+    "### Why Citations?\n",
+    "\n",
+    "In this notebook, I focus on non-traffic citations as an indicator of general public safety and social order in Pittsburgh neighborhoods. These include minor offenses such as public intoxication, disorderly conduct, and littering. While not as severe as crimes leading to arrests, they still reflect the level of disturbance or antisocial behavior in a community. The idea is that fewer citations may suggest a calmer, more orderly neighborhood. This metric complements more serious crime data and adds a unique layer to our group's overall definition of \"safety.\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcc63255",
+   "metadata": {},
+   "source": [
+    "The dataset used in this notebook was sourced from the WPRDC (Western Pennsylvania Regional Data Center). It contains records of non-traffic citations issued by police officers in the City of Pittsburgh. After loading the data, I filtered it to retain only relevant columns and dropped records with missing neighborhood information.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "id": "b80b6f74",
@@ -66,6 +84,22 @@
     "\n",
     "# Extract year for time-based analysis\n",
     "citations['YEAR'] = citations['CITEDTIME'].dt.year"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d7f34db",
+   "metadata": {},
+   "source": [
+    "The chart below shows the 10 neighborhoods with the highest number of non-traffic citations. This helps us identify areas where minor disturbances are most frequent.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "845c93a4",
+   "metadata": {},
+   "source": [
+    "We can see that neighborhoods like South Side Flats and Central Oakland have the highest citation counts. These may be due to nightlife or student populations, and they negatively impact their \"safety\" score in our metric.\n"
    ]
   },
   {
@@ -198,6 +232,16 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c318dda",
+   "metadata": {},
+   "source": [
+    "Interestingly, the number of citations has fluctuated over time, with a slight decline after 2020. This could be influenced by the COVID-19 pandemic or policy changes in law enforcement.\n",
+    "\n",
+    "Additionally, the gender breakdown shows that males account for nearly 72% of citations, possibly reflecting broader patterns in public behavior or enforcement.\n"
    ]
   },
   {
@@ -433,6 +477,16 @@
     "plt.margins(y=0.01)\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35b86efb",
+   "metadata": {},
+   "source": [
+    "## 🧠 Conclusion / Personal Reflection\n",
+    "\n",
+    "I found this analysis eye-opening. Before starting this project, I assumed certain neighborhoods were safer than others based on reputation. However, the data challenged some of those assumptions. For example, while South Side Flats is known for its entertainment scene, it also appears to have a high rate of minor offenses. This makes me think more critically about what makes a neighborhood feel safe versus what the data shows. My personal favorite neighborhood may not score highest in the data — but that contrast is part of what makes this project interesting.\n"
    ]
   },
   {
