--- a/Arrests.ipynb
+++ b/Arrests.ipynb
@@ -38,7 +38,7 @@
     "# Drop rows with missing neighborhood \n",
     "arrests = arrests.dropna(subset=['INCIDENTNEIGHBORHOOD'])\n",
     "\n",
-    "# Convert CITEDTIME to datetime\n",
+    "# Convert ARREST to datetime\n",
     "arrests['ARRESTTIME'] = pd.to_datetime(arrests['ARRESTTIME'], errors='coerce')\n",
     "\n",
     "# Extract year for time-based analysis\n",
