--- a/Arrests.ipynb
+++ b/Arrests.ipynb
@@ -63,7 +63,7 @@
     }
    ],
    "source": [
-    "# Count citations per neighborhood\n",
+    "# Count arrests per neighborhood\n",
     "neighborhood_counts = arrests['INCIDENTNEIGHBORHOOD'].value_counts().head(10)\n",
     "\n",
     "# Plot\n",
