Update and rename Fire Incidents.ipynb to FireIncidents.ipynb

--- a/FireIncidents.ipynb
+++ b/FireIncidents.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "6907ebce-e237-4487-84ac-1e9ad1ea15f9",
+   "metadata": {},
+   "source": [
+    "# Fire Incidents \n",
+    "\n",
+    "### Looking at which neighborhoods had the least number of fire incidents helps show which areas might be safer when it comes to fire risk. On the other hand, neighborhoods with a lot of fire incidents could have things like older buildings, safety issues, or just more people living there. This kind of data can help the city know where to focus on fire prevention and safety improvements."
+  ]
+ },
+{
+ "cells": [
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "773ee180-c562-45ca-840a-a75513fea9e9",
