--- a/Presentation_Final.ipynb
+++ b/Presentation_Final.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "49a049fb",
    "metadata": {},
    "outputs": [
@@ -303,8 +303,6 @@
     "plt.ylabel('Count')\n",
     "plt.xticks(rotation=45)\n",
     "plt.show()\n",
-    "\n",
-    "\n",
     "\n",
     "# Decoder dictionary\n",
     "offense_decoder = {\n",
@@ -1232,7 +1230,9 @@
     "- Applied custom weights to each category (e.g., arrests matter more than citations)\n",
     "- Calculated a composite **safety score** and normalized it to a 0–100 scale, where 100 represents the safest possible score\n",
     "\n",
-    "This score lets us fairly compare neighborhoods based on multiple safety-related indicators.\n"
+    "This score lets us fairly compare neighborhoods based on multiple safety-related indicators.\n",
+    "\n",
+    "Z-score indicates "
    ]
   },
   {
