Another Mariia's comitttt

--- a/Presentation_Final.ipynb
+++ b/Presentation_Final.ipynb
@@ -1232,12 +1232,12 @@
     "\n",
     "This score lets us fairly compare neighborhoods based on multiple safety-related indicators.\n",
     "\n",
-    "Z-score indicates "
+    "Z-score indicates how far from the mean each of your data values is using a standardized scale."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
    "id": "04a1cb73-e566-4686-9bf8-f06378ee4e6f",
    "metadata": {},
    "outputs": [
@@ -1260,6 +1260,10 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
+    "import geopandas as gpd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from math import pi\n",
     "\n",
     "# Verify the data directory exists\n",
     "if not os.path.exists('data'):\n",
@@ -1484,13 +1488,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import geopandas as gpd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from math import pi\n",
-    "\n",
     "# 1. Data Preparation\n",
     "neighborhoods = gpd.read_file('data/City_of_Pittsburgh_Neighborhoods.shp')[['HOOD', 'geometry']].rename(columns={'HOOD': 'hood'})\n",
     "\n",
