--- a/DataProject.ipynb
+++ b/DataProject.ipynb
@@ -5,17 +5,33 @@
    "id": "752ed8ce",
    "metadata": {},
    "source": [
-    "### Why Citations?\n",
+    "## Mariia Sierova\n",
     "\n",
-    "In this notebook, I focus on non-traffic citations as an indicator of general public safety and social order in Pittsburgh neighborhoods. These include minor offenses such as public intoxication, disorderly conduct, and littering. While not as severe as crimes leading to arrests, they still reflect the level of disturbance or antisocial behavior in a community. The idea is that fewer citations may suggest a calmer, more orderly neighborhood. This metric complements more serious crime data and adds a unique layer to our group's overall definition of \"safety.\"\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bcc63255",
-   "metadata": {},
-   "source": [
-    "The dataset used in this notebook was sourced from the WPRDC (Western Pennsylvania Regional Data Center). It contains records of non-traffic citations issued by police officers in the City of Pittsburgh. After loading the data, I filtered it to retain only relevant columns and dropped records with missing neighborhood information.\n"
+    "### 🚔 Analyzing Non-Traffic Citations in Pittsburgh Neighborhoods\n",
+    "\n",
+    "### 🔍 Why Citations \n",
+    "\n",
+    "Non-traffic citations serve as measurable indicators of community well-being. While not as severe as criminal offenses, these violations - including public intoxication, disorderly conduct, and quality-of-life offenses - provide critical insights into:\n",
+    "\n",
+    "### The Hidden Insights in Citation Data:\n",
+    "- **📊 Leading Indicator**: Areas with rising citations often see increased serious crime later\n",
+    "- **👮 Community-Police Dynamics**: Citation patterns reveal enforcement priorities\n",
+    "- **🌃 Neighborhood Character**: Nightlife hubs vs. quiet residential areas stand out clearly\n",
+    "\n",
+    "### 📂 The Data and Analysis\n",
+    "\n",
+    "**Source**: [Western PA Regional Data Center](https://www.wprdc.org) (Pittsburgh's official open data portal)\n",
+    "\n",
+    "**Dataset Includes**:\n",
+    "- 16,295 citations issued citywide\n",
+    "- 90+ Pittsburgh neighborhoods\n",
+    "\n",
+    "**Key Offense Categories**:\n",
+    "1. Public Intoxication (5505)\n",
+    "2. Disorderly Conduct (5503)\n",
+    "3. Underage Drinking (6308)\n",
+    "4. Public Urination (627.02)\n",
+    "5. Littering (601.16)\n"
    ]
   },
   {
@@ -546,7 +562,7 @@
    "source": [
     "## 🧠 Conclusion / Personal Reflection\n",
     "\n",
-    "I found this analysis eye-opening. Before starting this project, I assumed certain neighborhoods were safer than others based on reputation. However, the data challenged some of those assumptions. For example, while South Side Flats is known for its entertainment scene, it also appears to have a high rate of minor offenses. This makes me think more critically about what makes a neighborhood feel safe versus what the data shows. My personal favorite neighborhood may not score highest in the data — but that contrast is part of what makes this project interesting.\n"
+    "I found this analysis eye-opening. Before starting this project, I assumed certain neighborhoods were safer than others based on reputation. However, the data challenged some of those assumptions. For example, while South Side Flats is known for its entertainment scene, it also appears to have a high rate of minor offenses. This makes me think more about what makes a neighborhood feel safe versus what the data shows. My personal favorite neighborhood may not score highest in the data, but that contrast is part of what makes this project interesting.\n"
    ]
   },
   {
